crates/analyzer/tests/snapshots/errors__ctx_undefined_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `create` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_undefined_create.fe:5:13
  │
5 │         Bar.create(0)
  │             ^^^^^^ - supplied 1 argument
  │             │       
  │             expects 2 arguments

error: `Context` is not defined
  ┌─ compile_errors/ctx_undefined_create.fe:5:19
  │
4 │     pub fn baz() {
  │            ---
  │            │
  │            Note: declare `ctx` in this function signature
  │            Example: `pub fn foo(ctx: Context, ...)`
5 │         Bar.create(0)
  │                   ^^^ `ctx` must be defined and passed into the function
  │
  = Note: import context with `use std::context::Context`
  = Example: `MyContract.create(ctx, 0)`


